Fixed theme toggle on mobile.

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,6 +42,14 @@
     color: var(--invert);
   }
 
+  .mobile-name {
+    margin-top: 10px;
+    font-size: 20px;
+    padding-left: 10px;
+    color: var(--invert);
+    float: left;
+  }
+
   .toggle-label {
     float: right;
     padding-right: 10px;
@@ -54,7 +62,7 @@
     height: 30px;
     width: 60px;
     margin-top: 7px;
-    margin-right: 75px;
+    margin-right: 10px;
     border: 1px solid #000000;
     border-radius: 20px;
     float: right;
@@ -192,6 +200,7 @@
       width: 100%;
       padding: 10px;
       text-align: center;
+      color: var(--invert);
     }
   }
 }
@@ -279,7 +288,7 @@
 
     .card-title {
       text-align: center;
-      font-size: 30px;
+      font-size: 28px;
       font-weight: bold;
     }
 
